--- a/build.gradle
+++ b/build.gradle
@@ -38,9 +38,9 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-data-rest')
     compile('org.springframework.boot:spring-boot-starter-jdbc')
     compile('org.springframework.boot:spring-boot-starter-web')
-    compile('io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry')
     compile('org.springframework.cloud:spring-cloud-starter-openfeign')
-    compile('org.springframework.boot:spring-cloud-starter-netflix-eureka-client')
+//    compile('org.springframework.boot:spring-cloud-starter-netflix-eureka-client')
+    compile('io.pivotal.spring.cloud:spring-cloud-services-starter-config-client')
     compile('io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry')
     compile('org.springframework.boot:spring-boot-starter-hateoas')
     compile('org.springframework.cloud:spring-cloud-starter-netflix-hystrix')
