--- a/build.gradle
+++ b/build.gradle
@@ -40,13 +40,13 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.springframework.cloud:spring-cloud-starter-openfeign')
 //    compile('org.springframework.boot:spring-cloud-starter-netflix-eureka-client')
-    compile('io.pivotal.spring.cloud:spring-cloud-services-starter-config-client')
+    compile('io.pivotal.spring.cloud:spring-cloud-services-starter-config')
     compile('io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry')
     compile('org.springframework.boot:spring-boot-starter-hateoas')
     compile('org.springframework.cloud:spring-cloud-starter-netflix-hystrix')
     runtime('org.springframework.boot:spring-boot-devtools')
     runtime('mysql:mysql-connector-java')
-    testCompile('org.springframework.cloud:spring-cloud-starter-eureka-server')
+//    testCompile('org.springframework.cloud:spring-cloud-starter-eureka-server')
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile("com.github.springtestdbunit:spring-test-dbunit:${springDbUnitVersion}")
     testCompile("org.dbunit:dbunit:${dbUnitVersion}")
