--- a/build.gradle
+++ b/build.gradle
@@ -40,10 +40,10 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.springframework.cloud:spring-cloud-starter-openfeign')
 //    compile('org.springframework.boot:spring-cloud-starter-netflix-eureka-client')
-    compile('io.pivotal.spring.cloud:spring-cloud-services-starter-config')
-    compile('io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry')
+//    compile("io.pivotal.spring.cloud:spring-cloud-services-starter-config-client")
+    compile("io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry")
     compile('org.springframework.boot:spring-boot-starter-hateoas')
-    compile('org.springframework.cloud:spring-cloud-starter-netflix-hystrix')
+//    compile('org.springframework.cloud:spring-cloud-starter-netflix-hystrix')
     runtime('org.springframework.boot:spring-boot-devtools')
     runtime('mysql:mysql-connector-java')
 //    testCompile('org.springframework.cloud:spring-cloud-starter-eureka-server')
