--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,10 +13,8 @@ spring.datasource.password=1qa2ws!QA@WS
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
+# For mocking in test cases
 spring.jackson.serialization.fail-on-empty-beans=false
 
+# Circuit breaker
 feign.hystrix.enabled=true
-#spring.hateoas.use-hal-as-default-json-media-type=false
-#spring.data.rest.defaultMediaType = application/json
-
-id.default.null = -1
